# dns

./: AUTHORS  Makefile.am  README  configure.ac  dns.spec
.github/workflows/: build-rpm.yml  build.yml  cppcheck.yml  format.yml  rpm.yml
example/: https.c  tls.c  udp.c
hack/: Dockerfile.alpine  Dockerfile.fedora  Dockerfile.ubuntu
include/: classes.h  dns.h  dns_resolv.h  errors.h  message.h  print.h  read.h  types.h  utils.h  write.h
integration-tests/: Makefile.am  integration-tests.make  test_a.rb  test_aaaa.rb  test_help.rb  test_hinfo.rb  test_mx.rb  test_ns.rb  test_soa.rb  tests.rb
integration-tests/docker/: Dockerfile
integration-tests/testdata/bind/: example.test-bind  named.conf.local  named.conf.options
python/: Makefile.am  dns.c  setup.py
python/example/: https.py  resolv.py  tls.py  udp.py
python/src/dns/: __init__.py
src/: Makefile.am  classes.c  dns.c  dns_resolv.c  https.c  main.c  message.c  print.c  read.c  resolv.c  tls.c  types.c  udp.c  utils.c  write.c
tests/: Makefile.am  check_dns_resolv.c  check_types.c  check_write.c
